# bevy-rpg-try

./: Cargo.toml
assets/: bevy-rpg-try.ldtk
src/: animate.rs  camera.rs  main.rs  player.rs  state.rs  world_build.rs
src/player/: control.rs  states.rs
src/world_build/: bundles.rs  components.rs
